# chip8

./: CMakeLists.txt  README.md
include/: chip8.h  platform.h
src/: chip8.cpp  main.cpp  platform.cpp
